--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-<h1>DFC-api</h1>
-深林文学部开发者API库,由Vercel提供服务。
+<html>
+    <head>
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <h1>DFC-api</h1>
+        <p>深林文学部开发者API库，由Vercel提供服务器的支持。</p>
+    </body>
+</html>
