--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <ul>
     <li>对深林文学部的数据调用是出于技术、管理或其他可被认为“合理”的目的，而非盗取信息、与他站的数据进行对比分析和可能引起深林文学部或其成员不满的恶意行为。</li>
     <li>使用本DFC-api即代表同意深林文学部公布项目信息和以管理目的来合理使用你的项目，同时深林文学部有权拒绝为滥用者/为滥用提供帮助者/接口恶意调取者服务。</li>
-    <li>深林文学部可以为特别友好关系的合作伙伴和附属网站提供API接口支持，也有权在中断合作后拒绝提供支持。</li>
-    <li>不得以项目许可证或最终用户许可规等方式逃避本接口使用规则和深林文学部网站站规等规则。</li>
+    <li>深林文学部可以为特别友好关系的合作伙伴和附属网站提供API接口支持，也有权在中断合作关系后拒绝继续为其提供支持。</li>
+    <li>不得以项目许可证或最终用户许可协议等方式逃避本接口使用规则和深林文学部网站站规等规则。</li>
 </ul>
 
 <h2>接口调取方式</h2>
