--- a/index.html
+++ b/index.html
@@ -1,42 +1,50 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>DFC-api</title>
 </head>
+
 <body>
 
-<h1>DFC-api</h1>
+    <h1>DFC-api</h1>
 
-<h2>DFC-api介绍</h2>
-<p>DFC-api会通过外部方式调取深林文学部社区网站的数据，以JSON格式给开发者调取。DFC-api会在每次调用时代替使用者获取信息，目前的DFC-api并没有储存信息的功能。</p>
-<p>DFC-api会减少开发者的开发难度，转移开发重点和难点，并通过官方方式获取信息，避免给Wikidot服务器造成压力。</p>
+    <h2>DFC-api介绍</h2>
+    <p>DFC-api会通过外部方式调取深林文学部社区网站的数据，以JSON格式给开发者调取。DFC-api会在每次调用时代替使用者获取信息，目前的DFC-api并没有储存信息的功能。</p>
+    <p>DFC-api会减少开发者的开发难度，转移开发重点和难点，并通过官方方式获取信息，避免给Wikidot服务器造成压力。</p>
 
-<h2>关于限制速率</h2>
-<p>DFC-api限制大多数调取的速率为每分钟10次请求。深林文学部向部分有需要的开发者分别提供1个月（测试使用）和3个月（正式使用，可以根据使用的正确性和项目活跃度在使用期过后由开发者申请延长）的无速率限制的加密TOKEN密钥，使用方式是在URL上添加<code>token</code>值。</p>
-<p>限制速率的目的是避免非官方方式给Wikidot和Vercel服务器带来过大的压力，使用官方方式将使调取更合理。</p>
-<p>无速率限制的DFC-api因为可能造成不当使用，故要求申请的开发者符合以下条件：</p>
-<ul>
-    <li>加入开发计划，在开发计划中长期活跃。</li>
-    <li>已完成所需DFC-api的项目的大概内容。</li>
-    <li>项目闭源或以其他方式避免TOKEN泄露。</li>
-    <li>项目用途由技术组认可并符合网站站规。</li>
-</ul>
+    <h2>关于限制速率</h2>
+    <p>DFC-api限制大多数调取的速率为每分钟10次请求。深林文学部向部分有需要的开发者分别提供1个月（测试使用）和3个月（正式使用，可以根据使用的正确性和项目活跃度在使用期过后由开发者申请延长）的无速率限制的加密TOKEN密钥，使用方式是在URL上添加<code>token</code>值。
+    </p>
+    <p>限制速率的目的是避免非官方方式给Wikidot和Vercel服务器带来过大的压力，使用官方方式将使调取更合理。</p>
+    <p>无速率限制的DFC-api因为可能造成不当使用，故要求申请的开发者符合以下条件：</p>
+    <ul>
+        <li>加入开发计划，在开发计划中长期活跃。</li>
+        <li>已完成所需DFC-api的项目的大概内容。</li>
+        <li>项目闭源或以其他方式避免TOKEN泄露。</li>
+        <li>项目用途由技术组认可并符合网站站规。</li>
+    </ul>
 
-<h2>接口使用规则</h2>
-<p>DFC-api的任何调用和使用都必须遵循以下规则和限制：</p>
-<ul>
-    <li>对深林文学部的数据调用是出于技术、管理或其他可被认为“合理”的目的，而非盗取信息、与他站的数据进行对比分析和可能引起深林文学部或其成员不满的恶意行为。</li>
-    <li>使用本DFC-api即代表同意深林文学部公布项目信息和以管理目的来合理使用你的项目，同时深林文学部有权拒绝为滥用者/为滥用提供帮助者/接口恶意调取者服务。</li>
-    <li>深林文学部可以为特别友好关系的合作伙伴和附属网站提供API接口支持，也有权在中断合作关系后拒绝继续为其提供支持。</li>
-    <li>不得以项目许可证或最终用户许可协议等方式逃避本接口使用规则和深林文学部网站站规等规则。</li>
-</ul>
+    <h2>接口使用规则</h2>
+    <p>DFC-api的任何调用和使用都必须遵循以下规则和限制：</p>
+    <ul>
+        <li>对深林文学部的数据调用是出于技术、管理或其他可被认为“合理”的目的，而非盗取信息、与他站的数据进行对比分析和可能引起深林文学部或其成员不满的恶意行为。</li>
+        <li>使用本DFC-api即代表同意深林文学部公布项目信息和以管理目的来合理使用你的项目，同时深林文学部有权拒绝为滥用者/为滥用提供帮助者/接口恶意调取者服务。</li>
+        <li>深林文学部可以为特别友好关系的合作伙伴和附属网站提供API接口支持，也有权在中断合作关系后拒绝继续为其提供支持。</li>
+        <li>不得以项目许可证或最终用户许可协议等方式逃避本接口使用规则和深林文学部网站站规等规则。</li>
+    </ul>
 
-<h2>接口调取方式</h2>
-<p>针对各方面的接口调取均有不同的文档和调取介绍。大致方法如下。</p>
+    <h2>接口调取方式</h2>
+    <p>针对各方面的接口调取均有不同的文档和调取介绍。大致方法如下。</p>
 
-<code>https://api.dfcwiki.eu.org/api/{NAME}</code>
+    <code>https://api.dfcwiki.eu.org/api/{NAME}</code>
 
-<p>部分接口可能存在参数值，按照相应的文档调取即可。</p>
+    <p>部分接口可能存在参数值，按照相应的文档调取即可。</p>
+
+    <script type="text/javascript">
+        window.location.href = "https://github.com/DeepForestClub/DFC-api";
+    </script>
 
 </body>
+
 </html>
